--- a/mars/3-dars/index.html
+++ b/mars/3-dars/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <input type="file" style="width: 200px;height: 100px;">
-</body>
+  </head>
+  <style>
+    .wrapper h1 {
+      font-size: 16px;
+    }
+    .box {
+      display: flex;
+    }
+  </style>
+  <body>
+    <div id="container"></div>
+    <script src="./index.js"></script>
+  </body>
 </html>
